fixed 1. 적용 폰트가 설정 언어를 무시하고 한글로 나오던 오류 수정

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -89,5 +89,6 @@
     <string name="font_chose">Select Font</string>
     <string name="zoom">Zoom</string>
     <string name="test_font">Test</string>
+    <string name="적용">Apply</string>
 
 </resources>
