--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -89,4 +89,5 @@
     <string name="font_chose">Sélectionner une police</string>
     <string name="zoom">agrandissement</string>
     <string name="test_font">prévisualisation</string>
+    <string name="적용">Appliquer</string>
 </resources>
