--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -89,4 +89,5 @@
     <string name="font_chose">フォント選択</string>
     <string name="zoom">拡大</string>
     <string name="test_font">プレビュー</string>
+    <string name="적용">適用</string>
 </resources>
